--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,10 +87,11 @@ button:disabled {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('../img/joinbg.jpg');
 }
 
 .centered-form__box {
-    box-shadow: 0px 0px 17px 1px #1D1F26;
+    box-shadow: 0px 0px 17px 1px #495e55;
     background: #F7F7FA;
     padding: 24px;
     width: 250px;
